apps/dev/jellyfin/resources/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  annotations:
    argocd.argoproj.io/sync-wave: "-4"
