apps/dev/jellyfin/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: jellyfin.media.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: jellyfin.media.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/target: media.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: jellyfin-production
    namespace: jellyfin
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: Host(`jellyfin.media.anotherlife.org.pl`)
          middlewares:
            - name: authentik-securityheaders
              namespace: traefik
            # - name: basicauth
            #   namespace: traefik
            - name: gzip
              namespace: traefik
          services:
            - kind: TraefikService
              name: jellyfin
              namespace: jellyfin
    tls:
        domains:
            - main: media.anotherlife.org.pl
              sans:
                - .media.anotherlife.org.pl
        options:
            name: tls-ver13
            namespace: traefik
        secretName: jellyfin-cf-production
