apps/dev/jellyfin/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        cert-manager.io/common-name: ENC[AES256_GCM,data:og4r0sAtyvs7dq/q9ypbBjiNCPaHWnhGNWUz6JcRHLZm,iv:DQmTg9C93NGmUtRtfaCTPSPz6ZRWGgZcuIvfPBXaFh0=,tag:8nXC7xYCJmhLkPTWe8nfGw==,type:str]
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:umVMcTNbw2lQRkqXap6JsBu9NnqmL7jMwmA0KowKTFAK,iv:PD4+OgkRPY2yuC9q+8ma2MMhysN772cqwRq4ts3+7Mo=,tag:Jx0I7reBZVoy9Y3xEGUpgg==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:ubKWk2hQRoItEDjA4cSFaJ4ISTFvvFh0,iv:XQEuBoqeghCI9alVKgbStHPth6Q3MiN3boEvdit6Alk=,tag:CYtlfellq4+Y/tyU0HJFLA==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: jellyfin-staging
    namespace: jellyfin
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:duN7kcXVFCOLQ8Te1w7pdAP3FdKnS5lbJTVmg5kgKKoIbTM5QaMAIDI=,iv:II/uKxfTQ9GvGslE8bIbYcPCNH3LPs/TRoAvvhLvME0=,tag:SVkV1+9o7ZiJyGIBYnF0MA==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: jellyfin
              namespace: jellyfin
    tls:
        domains:
            - main: ENC[AES256_GCM,data:FinDQ5jw7R7Mh86rbNHZHDzAqY0NXBVe,iv:7on5HxbC5mcI8qruZQ9d4PL0TS4auMaIIoHemQfy/2I=,tag:bTJS68D9szIWRYNH7Ondzg==,type:str]
              sans:
                - ENC[AES256_GCM,data:4J6T0ijSSBvp4kN3bVqWN7zKrJLPYjg1Ag==,iv:mXvpoEyBUT96pkjDyPA9j+ozWZl03xGPlrbpGPS5xAw=,tag:9e4u1cY304hR9pTmtUbvCQ==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: jellyfin-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlYy85U2VubTB5WGJuWDE2
[...]
            eAv8FK6Srepu1C3GIhs4PiN9f07XAuoUwEU1k0lcIx6XXU4BqAQbTw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-17T11:31:19Z"
    mac: ENC[AES256_GCM,data:yFqwe97OErNt3Nyx1UEJ20a/YqdpCqDyibD3DS78kqKISxglelGhrBeLPJnWabL/WxDEqsWrN6E/RTWIwug4Go4Skn60D72/6uDxC6b2Ghaq63B4XIlcdq8hVh9pCCgS1BJM79p5BCm0vdqxRHXdbZFmw61aMqXJ3yK2C1rVRMI=,iv:U3IFhgIn9FlHRhijMRU6CregX9GC7VZr20JaviwStts=,tag:nvgLCBiuqDtcQVxh4zm6SA==,type:str]
    pgp:
        - created_at: "2024-10-17T10:24:16Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//dN0TP4IKo4J/jtoVV/Wli4nQD/55WoWlbOWizH8gVqsS
[...]
            =pZ5n
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|cert-manager.io/common-name|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.0
